--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
     "ad": "^0.3.2",
+    "connectwise-rest": "0.0.19",
     "cors": "^2.8.4",
     "ebay-api": "^1.13.7",
     "fast-csv": "^2.4.1",
